tests/files/type_checker_tests/should_pass/142.cmdr
//Test that not equals operation type checks
x = 1.2 != 2.1;
