tests/files/type_checker_tests/should_fail/009.cmdr
//Should fail when doing not on something that is not boolean
x = !2.0;